package com.upm.master.mastermind.controller;

public interface ControllerVisitor {
   void visit(StartController startController);
   void visit(PlayController playController);
   void visit(ResumeController resumeController);
}
